--- a/css/theme-template.css
+++ b/css/theme-template.css
@@ -1,6 +1,6 @@
 /*
 	Colour palette: EMBL-EBI [project name] [main colour]
-  Save as [your-project-name]-colours.css
+  Save as theme-[projectname].css
 */
 
 a {
