--- a/css/ebi-global-drupal.css
+++ b/css/ebi-global-drupal.css
@@ -1,4 +1,4 @@
-/* Drupal specific tweaks */
+/* Drupal 7/8 specific tweaks -- housed here as a central authority */
 
 /* Drupal edit/local tabs */
 .button-group { margin-left: 0; margin-top: 2rem;}
