--- a/css/theme-ebi-services-about.css
+++ b/css/theme-ebi-services-about.css
@@ -20,7 +20,8 @@ a.special { background-color: #7cd17c; }
 
 a.label,
 .label,
-.button {       
+.button,
+.button.primary {       
   background-color: rgb(2,100,105);
   color: #f8f8f8;
 }   
