--- a/css/theme-embl-petrol.css
+++ b/css/theme-embl-petrol.css
@@ -20,7 +20,8 @@ a.special { background-color: #7cd17c; }
 
 a.label,
 .label,
-.button {       
+.button,
+.button.primary {       
   background-color: rgb(0,124,130);
   color: #f8f8f8;
 }   
