--- a/css/theme-ebi-industry.css
+++ b/css/theme-ebi-industry.css
@@ -25,6 +25,8 @@ a.label,
   background-color: rgb(0,134,180);
   color: #f8f8f8;
 }   
+.button.primary:hover,
+.button.primary:focus,
 .button:hover,
 .button:focus,
 .button:active { background: rgba(0,134,180,.9); }
