--- a/css/theme-ebi-research.css
+++ b/css/theme-ebi-research.css
@@ -25,6 +25,8 @@ a.label,
   background-color: rgb(109,171,73);
   color: #f8f8f8;
 }   
+.button.primary:hover,
+.button.primary:focus,
 .button:hover,
 .button:focus,
 .button:active { background: rgba(109,171,73,.9); }
