--- a/css/theme-ebi-services-about.css
+++ b/css/theme-ebi-services-about.css
@@ -25,6 +25,8 @@ a.label,
   background-color: rgb(2,100,105);
   color: #f8f8f8;
 }   
+.button.primary:hover,
+.button.primary:focus,
 .button:hover,
 .button:focus,
 .button:active { background: rgba(2,100,105,.9); }
