--- a/css/theme-embl-petrol.css
+++ b/css/theme-embl-petrol.css
@@ -25,6 +25,8 @@ a.label,
   background-color: rgb(0,124,130);
   color: #f8f8f8;
 }   
+.button.primary:hover,
+.button.primary:focus,
 .button:hover,
 .button:focus,
 .button:active { background: rgba(0,124,130,.9); }
