--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -349,11 +349,15 @@ div#local-title {
 /* tweak sticky behaviour */
 div#local-masthead {
   width: 100%;
-  position: static; }
+  position: static;
+  -webkit-transform: none;
+  transform: none; }
 
 div#local-masthead.sticky.is-stuck {
   margin-top: -10.5em !important;
-  position: fixed; }
+  position: fixed;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
 
 input#local-searchbox,
 #local-search [type="submit"] {
