--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -247,34 +247,33 @@ a:active {
   }
 
   /* Menu triangles */
-  @media screen and (min-width: 40em) {
-    #local-masthead  {
-      nav ul#secondary-menu-links.menu li a:hover:after,
-      nav ul#global-nav.menu li a:hover:after,
-      nav ul.dropdown.menu.float-left li a:hover:after {
-        position: relative;
-        content: '';
-        width: 0;
-        display: block;
-        left: 50%;
-        top: 6px;
-        height: 0;
-        bottom: 0;
-        margin: 0 -36px -5px -18px;
-        border-left: 18px solid transparent;
-        border-right: 18px solid transparent;
-        border-bottom: 5px solid rgb(0,0,0);
-        -moz-transform: scale(0.999);
-        -webkit-backface-visibility: hidden;
-      }
+  #local-masthead  {
+    nav ul#secondary-menu-links.menu li a:hover:after,
+    nav ul#global-nav.menu li a:hover:after,
+    nav ul.menu li a:hover:after {
+      position: relative;
+      content: '';
+      width: 0;
+      display: block;
+      left: 50%;
+      top: 6px;
+      height: 0;
+      bottom: 0;
+      margin: 0 -36px -5px -18px;
+      border-left: 18px solid transparent;
+      border-right: 18px solid transparent;
+      border-bottom: 5px solid rgb(0,0,0);
+      border-top: none;
+      -moz-transform: scale(0.999);
+      -webkit-backface-visibility: hidden;
+    }
 
-      nav ul#global-nav.menu li.float-right a:hover:after { display: none; }
+    nav ul#global-nav.menu li.float-right a:hover:after { display: none; }
 
-      nav ul#secondary-menu-links.menu li a:hover:after,
-      nav ul.dropdown.menu.float-left li a:hover:after {
-        border-bottom-color: #fff;
-        margin-bottom: -5px;
-      }
+    nav ul#secondary-menu-links.menu li a:hover:after,
+    nav ul.dropdown.menu.float-left li a:hover:after {
+      border-bottom-color: #fff;
+      margin-bottom: -5px;
     }
   } // END #local-masthead
 
