--- a/css/compliance-legacy-compatibility.css
+++ b/css/compliance-legacy-compatibility.css
@@ -76,12 +76,11 @@ img.float-l {
      display: block;
    }
    .event-teaser .event-field {
-     /* margin: 0 9px; */
      display: block;
    }
    .course-teaser-details, .event-teaser-details {
-     top: 0.1em;
-     width: 87%;
+     margin-top: 0.1em;
+     width: 84%;
    }
    @media (max-width:1075px) {
      .event-teaser-details {
@@ -130,6 +129,7 @@ img.float-l {
    }
    .course-teaser span {
      display: inline-block;
+     float: left;
    }
    .course-teaser div.date {
      display: block;
@@ -138,33 +138,23 @@ img.float-l {
      margin: 0 9px;
      display: block;
    }
-   .course-teaser .start-now {
-     position: relative;
-     top: 0.1em;
-     border: 1px solid #afafaf;
+   .course-teaser .start-now a:link {
+     border: 1px solid #fff;
      display: block;
-     float: left;
-     padding: 2px;
+     padding: 5px;
      text-align: center;
      font-weight: bold;
-     color: #444;
      font-size: 85%;
-     margin: 0 9px;
-     -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-     border-radius: 2px;
-     background: #eeeeee;
-     background: -moz-linear-gradient(top, #fefefe 0%, #efefef 100%);
-     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fefefe), color-stop(100%, #efefef));
-     background: -webkit-linear-gradient(top, #fefefe 0%, #efefef 100%);
-     background: -o-linear-gradient(top, #fefefe 0%, #efefef 100%);
-     background: -ms-linear-gradient(top, #fefefe 0%, #efefef 100%);
-     background: linear-gradient(to bottom, #fefefe 0%, #efefef 100%);
-     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#fefefe', endColorstr='#efefef', GradientType=0);
-   }
-   .course-teaser .start-now a:link {
+     margin: .5em 9px 0;
+     background: #fab700;
      border-bottom: none;
-     text-shadow: 1px 1px 1px rgba(180, 180, 180, 1);
+     color: #fff;
+   }
+   .course-teaser .start-now a:hover {
+     border: 1px solid #fab700 !important;
+     border-bottom: none;
+     color: #fab700;
+     background: #fff;
    }
    .section-about .event-participation {
      display: none;
@@ -179,9 +169,7 @@ img.float-l {
      margin-right: 0.3em;
      background-color: #ddd;
      padding: 1px 4px 1px 4px;
-     -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-     border-radius: 4px;
+     font-size: .85rem;
    }
    .ebi-tags {
      float: right;
@@ -258,11 +246,11 @@ img.float-l {
      width: 0.25em;
      height: 0.35em;
      position: absolute;
-     left: 0.3em;
+     left: 4px;
      top: -0.3em;
    }
    .event-date .calendarpage .uck {
-     left: 1.5em;
+     left: 24px;
    }
    .events table {
      border-spacing: 0 10px;
