--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -158,6 +158,12 @@ a:active {
   nav a,
   nav a:hover { border-bottom: none; }
 
+  #local-masthead {
+    // highlight links in the textual area of the local masthead
+    #local-title .columns a { border-bottom: 1px dotted rgb(255,255,255); }
+    #local-masthead #local-title .columns a:hover { border-bottom: none; }
+  }
+
   /* Global menu styling */
   #local-masthead nav ul#global-nav.menu li { border-right: none; }
 
