Add note on role of _settings.scss

--- a/css/foundation/_settings.scss
+++ b/css/foundation/_settings.scss
@@ -1,3 +1,6 @@
+// Note: this file will be built using 'npm run scss' or, directly, using 'npm run foundation-scss'.
+//       This file could become the the EBI theme and would move up one driectory to _ebi_global_theme.scss
+
 //  Foundation for Sites Settings
 //  -----------------------------
 //
