Adds no underline and no-margin utility classes

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -763,6 +763,15 @@ code {
 .inline-block {
   display: inline-block; }
 
+/* no margins */
+.no-margin {
+  margin: 0; }
+
+/* no underline for links */
+a.no-underline {
+  border-bottom: none;
+  text-decoration: none; }
+
 /* buttons */
 .button:focus,
 .button:hover,
