--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -693,6 +693,12 @@ code { font-size: .95rem; }
 /* inline-block */
 .inline-block { display: inline-block; }
 
+/* no margins */
+.no-margin { margin: 0; }
+
+/* no underline for links */
+a.no-underline { border-bottom: none; text-decoration: none; }
+
 /* buttons */
 .button:focus,
 .button:hover,
